Fix backport errors.